fixing size and spacing of forumTop message

--- a/client/src/pages/Forum/style.css
+++ b/client/src/pages/Forum/style.css
@@ -1,3 +1,8 @@
 * {
     font-family: 'Work Sans';
 }
+
+#forumTop {
+    font-size: 1.8em;
+    padding-bottom: 20px;
+}
